--- a/upofly/views/cliente_view.xml
+++ b/upofly/views/cliente_view.xml
@@ -1,22 +1,33 @@
 <odoo>
-  <data>
-    <record model='ir.ui.view' id='cliente_res_partner'>
-        <field name='name'>cliente_res_partner_inherit</field>
-        <field name='model'>upofly.cliente</field>
-        <field name='inherit_id' ref='base.view_partner_form'/>
-        <field name='arch' type='xml'>
-			<field name="name" position="after">
-                <field name="identificacion" />
-            </field>
-		</field>
-    </record>
-    <record id="act_clientes" model="ir.actions.act_window">
-		<field name="name">Gestión de Clientes</field>
-		<field name="res_model">upofly.cliente</field>
-		<field name="view_mode">tree,form</field>
-	</record>
-	<menuitem id="upofly" name="UPOFly" action="act_clientes" />
-	<menuitem name="Clientes" id="clientes_submenu" parent="upofly" sequence="100" />
-	<menuitem name="Ver clientes" id="clientes_submenu_2" parent="clientes_submenu" sequence="100" action="act_clientes" />
-  </data>
+ 	<data>
+ 		<record id="clientes_view_search" model="ir.ui.view">
+ 			<field name="name">upofly.cliente.search</field>
+ 			<field name="model">upofly.cliente</field>
+ 			<field name="arch" type="xml">
+ 				<search string="Buscar">
+ 					<filter name='es_particular' string="Particulares" domain="[('is_company','=',False)]" />
+ 					<filter name='es_empresa' string="Empresas" domain="[('is_company','=',True)]" />
+ 				</search>
+ 			</field>
+ 		</record>
+    	<record model='ir.ui.view' id='cliente_res_partner'>
+	        <field name='name'>cliente_res_partner_inherit</field>
+	        <field name='model'>upofly.cliente</field>
+	        <field name='inherit_id' ref='base.view_partner_form'/>
+	        <field name='arch' type='xml'>
+				<field name="name" position="after">
+	                <field name="identificacion" />
+	            </field>
+			</field>
+	    </record>
+	    <record id="act_clientes" model="ir.actions.act_window">
+			<field name="name">Gestión de Clientes</field>
+			<field name="res_model">upofly.cliente</field>
+			<field name="view_mode">tree,kanban,form</field>
+			<field name="search_view_id" ref="clientes_view_search"/>
+		</record>
+		<menuitem id="upofly" name="UPOFly" action="act_clientes" />
+		<menuitem name="Clientes" id="clientes_submenu" parent="upofly" sequence="100" />
+		<menuitem name="Ver clientes" id="clientes_submenu_2" parent="clientes_submenu" sequence="100" action="act_clientes" />
+ 	</data>
 </odoo>
