--- a/upofly/views/parteMantenimiento_view.xml
+++ b/upofly/views/parteMantenimiento_view.xml
@@ -51,12 +51,26 @@
 		</record>
 
 
+
+		<record model="ir.ui.view" id="upofly_parteMantenimiento_calendar">
+			<field name="name">upofly_parteMantenimiento_calendar</field>
+			<field name="model">upofly.parte_mantenimiento</field>
+			<field name="type">calendar</field>
+			<field name="arch" type="xml">
+				<calendar string="Partes de Matenimiento" date_start="fecha"
+					date_delay="tiempoEstimado" mode="month" color="aeronave_id">
+					<field name="estado"/>
+				</calendar>
+			</field>
+		</record>
+
+
 		<record id="act_parteMantenimiento"
 			model="ir.actions.act_window">
 			<field name="name">Partes de Mantenimiento</field>
 			<field name="res_model">upofly.parte_mantenimiento</field>
 			<field name="view_type">form</field>
-			<field name="view_mode">tree,form</field>
+			<field name="view_mode">tree,form,calendar</field>
 		</record>
 
 		<menuitem name="Partes de Mantenimiento"
