--- a/upofly/views/ruta_view.xml
+++ b/upofly/views/ruta_view.xml
@@ -49,7 +49,7 @@
 			<field name="view_mode">tree,form</field>
 		</record>
 
-		<menuitem id="vuelo_submenu" parent="upofly" name="vuelo"
+		<menuitem id="vuelo_submenu" parent="upofly" name="Vuelo"
 			sequence="100" />
 		<menuitem id="ruta_submenu" parent="vuelo_submenu"
 			name="Rutas" action="act_ruta" sequence="110" />
