--- a/upofly/views/ruta_view.xml
+++ b/upofly/views/ruta_view.xml
@@ -1,27 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
 	<data>
-		<record id="upofly_ruta_form" model="ir.ui.view">
-			<field name="name">Ruta</field>
-			<field name="model">upofly.ruta</field>
-			<field name="arch" type="xml">
-				<form string="form_ruta">
-					<group string="rutas">
-						<field name="nombre" />
-						<field name="descripcion" />
-						<field name="lista_coordenadas" />
-					</group>
-				</form>
-			</field>
-		</record>
-
 		<record id="view_upofly_ruta_form" model="ir.ui.view">
 			<field name="name">view_upofly_ruta_form</field>
 			<field name="model">upofly.ruta</field>
 			<field name="type">form</field>
 			<field name="arch" type="xml">
-				<form string="form_ruta">
-					<group string="rutas">
+				<form>
+					<group string="Ruta">
 						<field name="nombre" />
 						<field name="descripcion" />
 						<field name="lista_coordenadas" />
