--- a/upofly/views/parteMantenimiento_view.xml
+++ b/upofly/views/parteMantenimiento_view.xml
@@ -1,29 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
 	<data>
-		<record model="ir.ui.view" id="upofly_parteMantenimiento_form">
-			<field name="name">Parte Mantenimiento</field>
-			<field name="model">upofly.parte_mantenimiento</field>
-			<field name="arch" type="xml">
-				<form string="Form de parte de Mantenimiento">
-					<group string="PartesDeMantenimiento">
-						<field name="aeronave_id" />
-						<field name="fecha" />
-						<field name="descripcion" />
-						<field name="estado" />
-						<field name="tiempoEstimado" />
-					</group>
-				</form>
-			</field>
-		</record>
-
 		<record model="ir.ui.view"
 			id="view_upofly_parteMantenimiento_form">
 			<field name="name">view_upofly_parteMantenimiento_form</field>
 			<field name="model">upofly.parte_mantenimiento</field>
 			<field name="type">form</field>
 			<field name="arch" type="xml">
-				<form string="Partes de Mantenimiento">
+				<form>
 					<group string="Partes de Mantenimiento">
 						<field name="aeronave_id" />
 						<field name="fecha" />
