--- a/upofly/views/vuelo_view.xml
+++ b/upofly/views/vuelo_view.xml
@@ -45,14 +45,26 @@
 			</field>
 		</record>
 
+		<record model="ir.ui.view" id="upofly_vuelo_calendar">
+			<field name="name">upofly_vuelo_calendar</field>
+			<field name="model">upofly.vuelo</field>
+			<field name="type">calendar</field>
+			<field name="arch" type="xml">
+				<calendar string="Vuelos"
+					date_start="fecha" date_stop="fecha" mode="week"
+					color="aeronave_id">
+					<field name="piloto_id" />
+				</calendar>
+			</field>
+		</record>
 
 		<record id="act_vuelos" model="ir.actions.act_window">
 			<field name="name">Vuelos</field>
 			<field name="res_model">upofly.vuelo</field>
 			<field name="view_type">form</field>
-			<field name="view_mode">tree,form</field>
+			<field name="view_mode">tree,form,calendar</field>
 		</record>
-		
+
 		<menuitem id="vuelo_submenu_2" parent="vuelo_submenu"
 			name="Vuelos" action="act_vuelos" sequence="120" />
 	</data>
