--- a/upofly/views/linea_de_venta_view.xml
+++ b/upofly/views/linea_de_venta_view.xml
@@ -9,6 +9,7 @@
 					<group string="Linea de Venta">
 						<field name="precio" />
 						<field name="venta_id" />
+						<field name="servicio_ids" />
 					</group>
 				</form>
 			</field>
@@ -21,6 +22,7 @@
 				<tree string="tree_string">
 					<field name="precio" />
 					<field name="venta_id" />
+					<field name="servicio_ids" />
 				</tree>
 			</field>
 		</record>
