--- a/upofly/views/vuelo_view.xml
+++ b/upofly/views/vuelo_view.xml
@@ -11,26 +11,12 @@
 						<field name="aeronave_id" />
 						<field name="ruta_id" />
 						<field name="piloto_id" />
+						<field name="linea_de_venta_id" />
 					</group>
 				</form>
 			</field>
 		</record>
 
-		<record model="ir.ui.view" id="view_upofly_vuelo_form">
-			<field name="name">view_upofly_vuelo_form</field>
-			<field name="model">upofly.vuelo</field>
-			<field name="type">form</field>
-			<field name="arch" type="xml">
-				<form string="Vuelos">
-					<group string="Vuelos">
-						<field name="fecha" />
-						<field name="aeronave_id" />
-						<field name="ruta_id" />
-						<field name="piloto_id" />
-					</group>
-				</form>
-			</field>
-		</record>
 
 		<record model="ir.ui.view" id="upofly_vuelo_tree_view">
 			<field name="name">upofly_vuelo_tree_view</field>
@@ -41,6 +27,7 @@
 					<field name="aeronave_id" />
 					<field name="ruta_id" />
 					<field name="piloto_id" />
+					<field name="linea_de_venta_id" />
 				</tree>
 			</field>
 		</record>
