--- a/upofly/views/venta_view.xml
+++ b/upofly/views/venta_view.xml
@@ -8,39 +8,43 @@
 				<form>
 					<group string="Ventas">
 						<field name="total" />
-						<field name="factura_id" />
+						<field name="fecha" />
+						<field name="observaciones" />
 						<field name="cliente_id" />
-						<field name="lineas_de_venta_ids" />
 					</group>
+					<notebook>
+						<page string="Líneas de venta">
+							<field name="lineas_de_venta_ids" />
+						</page>
+					</notebook>
 				</form>
 			</field>
 		</record>
-		
+
 		<record id="upofly_venta_tree_view" model="ir.ui.view">
 			<field name="name">upofly_venta_tree_view</field>
 			<field name="model">upofly.venta</field>
 			<field name="arch" type="xml">
 				<tree string="tree_string">
 					<field name="total" />
-					<field name="factura_id" />
 					<field name="cliente_id" />
-					<field name="lineas_de_venta_ids" />
+					<field name="fecha" />
 				</tree>
 			</field>
 		</record>
-		
-		
-		<record id="upofly_graph_tree_view" model="ir.ui.view">
+
+
+		<record id="upofly_venta_graph_view" model="ir.ui.view">
 			<field name="name">upofly_venta_graph_view</field>
 			<field name="model">upofly.venta</field>
 			<field name="arch" type="xml">
 				<graph string="Número de ventas por cliente">
-					<field name="cliente_id" type="row"/>
-					<field name="total_aux" type="col"/>
+					<field name="cliente_id" type="row" />
+					<field name="total_aux" type="col" />
 				</graph>
 			</field>
 		</record>
-		
+
 
 		<record id="act_venta" model="ir.actions.act_window">
 			<field name="name">Ventas</field>
